--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "@types/react-redux": "^7.1.25",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://github.com/Aartemius/products-n-orders",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
